# dhivehi-translation-arena

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGES.md  DEPLOYMENT.md  Dockerfile  README.md  TODO.md  app.py  compose.dev.yml  compose.yml  dhivehi-translation-arena.service  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  example.env  init_db.py  justfile  manage_users.py  pyproject.toml  requirements.txt  wsgi.py
.agent/rules/: dev-scripts.md
.agent/workflows/: commit.md
.github/workflows/: docker-build.yml
app/: __init__.py  cli.py  config.py  database.py  i18n.py  llm_clients.py  models.py  predefined_queries.py  routes.py
app/blueprints/: admin.py  auth.py  main.py  stats.py
app/repositories/: query_repository.py  translation_repository.py  user_repository.py  vote_repository.py
app/services/: cost_service.py  elo_service.py  stats_service.py  translation_service.py  user_service.py  vote_service.py
docs/: VOTING_SYSTEMS.md  deployment.md  ranking_methodology.md
docs/dev_notes/: model_naming_strategy.md  model_renaming.md
reports/: 2025-12-18_report_Gemini_3_Pro_High.md  2025-12-18_report_Opus_4.5_Thinking.md
scripts/: analyze_data.py  analyze_weights.py  manage_users.py  rename_model.py
static/css/: styles.css
static/js/: compare.js  main.js
templates/: base.html  compare.html  index.html  stats.html
