[project]
name = "dhivehi-translation-arena"
version = "0.1.0"
description = "A blind testing platform for comparing Arabic to Dhivehi translation models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask[async]>=3.1.0",
    "google-genai>=1.5.0",
    "gunicorn>=23.0.0",
    "openai>=1.65.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "werkzeug>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"


[tool.basedpyright]
typeCheckingMode = "off"


[tool.ty.environment]
python = "./.venv"


[tool.ruff.lint]
ignore = ["TRY300"]


[tool.setuptools]
packages = ["app"]

