[project]
name = "dhivehi-translation-arena"
version = "0.1.1"
description = "A blind testing platform for comparing Arabic to Dhivehi translation models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask[async]>=3.1.0",
    "google-genai>=1.5.0",
    "gunicorn>=23.0.0",
    "openai>=1.65.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "werkzeug>=3.0.0",
]

[project.optional-dependencies]
dev = ["black", "isort", "pytest"]

[tool.black]
line-length = 120

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.4,<0.9.0"]

[tool.uv.build-backend]
module-name = "app"
module-root = ""


[tool.ty.environment]
python = "./.venv"


[tool.ruff.lint]
ignore = ["TRY300"]
